bg styling fixes, should work on mobile now

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,10 +14,9 @@
   html {
     scroll-behavior: smooth;
     scroll-padding-top: theme("spacing.32");
-  }
-  body {
     background: url("/background.jpg") no-repeat center center fixed black;
     background-size: cover;
+    height: 100%;
   }
   .menu {
     @apply bg-white text-black shadow-lg;
